styles/styles.css
.container {
	max-width: 90rem;
	padding: 0 2rem;
	margin: 0 auto;
}

.grid {
	display: grid;
	gap: 6rem;
}

.grid--2-cols {
	grid-template-columns: repeat(2, 1fr);
}

.grid--3-cols {
	grid-template-columns: repeat(3, 1fr);
}

.grid--4-cols {
	grid-template-columns: repeat(4, 1fr);
}

.grid--5-cols {
	grid-template-columns: repeat(5, 1fr);
}

.header {
	position: fixed;
	display: flex;
	justify-content: space-between;
	align-items: center;
	width: 100%;
	max-width: 100%;
	height: 5rem;
	padding: 0 2rem;
	background-color: #fdf2e9;
}

.header--fixed {
	position: fixed;
	width: 100%;
	max-width: 100%;
	background-color: transparent;
}

.logo {
	height: 2rem;
}

.main-nav-list {
	display: flex;
	justify-content: space-around;
	align-items: center;
	gap: 0.5rem;
}

.main-nav-list-item a {
	padding: 0.75rem 2rem;
	color: #555;
	font-weight: 600;
	cursor: pointer;
}

.main-nav-list-item .btn {
	color: #fff;
}

.main-nav-list-item a:hover,
.main-nav-list-item a:focus,
.main-nav-list-item a:active {
	color: #e67e22;
}

.hero-section {
	background-color: #fdf2e9;
	padding: 1rem 0 2rem;
}

.hero-container {
	max-width: 81.25rem;
	display: grid;
	grid-template-columns: repeat(2, 1fr);
	align-items: center;
	padding: 1rem 2rem;
	margin: 0 auto;
}

@media (max-width: 1198) {
	.hero-container {
		grid-template-columns: 1fr;
	}
}

@media (min-width: 1200px) {
	.hero-container {
		grid-template-columns: (2, 1fr);
	}
}

.heading-primary {
	font-size: 3.45rem;
	font-weight: 700;
	line-height: 1.05;
	color: #333;
	margin-bottom: 3.2rem;
}

.heading-secondary {
	font-size: 2.5rem;
}

.subheading-text {
	font-size: 1.5rem;
}

.hero-description {
	font-size: 2rem;
	line-height: 1.6;
	margin-bottom: 4.8rem;
}

.hero-img {
	width: 100%;
}

.hero-btn-row {
	display: flex;
	flex-wrap: wrap;
	align-items: center;
	width: 100%;
}

.hero-btn-row .btn {
	margin-right: 0.5rem;
}

.btn {
	display: inline-block;
	border-radius: 0.888rem;
	padding: 0.75rem 2rem;
	font-size: 1rem;
	font-weight: 600;
}

.btn--primary {
	border: 0.0625rem solid #e67e22;
	background-color: #e67e22;
	color: #fff;
}

.btn--primary:hover,
.btn--primary:focus,
.btn--primary:active {
	border: 0.0625rem solid #e67e22;
	background-color: #fff;
	color: #e67e22;
}

.btn--secondary {
	border: 0.0625rem solid #373239;
	background-color: #373239;
	color: #fff;
}

.btn--secondary:hover,
.btn--secondary:focus,
.btn--secondary:active {
	border: 0.0625rem solid #373239;
	background-color: #fff;
	color: #555;
}

.delivery-meals {
	display: flex;
	flex-direction: column;
	align-items: center;
	width: 100%;
	height: 100%;
	padding: 1rem 0;
}

.delivery-customers {
	display: flex;
	flex-wrap: wrap;
	justify-content: center;
	align-items: center;
	width: 100%;
	padding: 2rem 0;
	margin-bottom: 0.5rem;
}

.delivery-customers img {
	width: 5.5rem;
	height: 5.5rem;
	margin-right: -1.1rem;
	border-radius: 50%;
}

.delivery-meals-number {
	display: flex;
	flex-direction: column;
	justify-content: center;
	align-items: center;
	width: 100%;
	padding: 0.25rem;
	font-weight: 500;
}

.delivery-meals-number .font-size-xxl {
	font-size: 3.5rem;
	font-weight: 600;
	color: #196f54;
}

.delivery-meals-number span {
	color: #373239;
	font-size: 1.25rem;
	font-weight: 700;
}

.featured-section {
	background-color: #ebecef;
	padding: 1rem 0 2rem;
	margin: 0.5rem auto;
}

.featured-section .heading-secondary {
	font-weight: 700;
	padding: 1rem 0;
	text-align: center;
}

.featured-brand-logos {
	display: flex;
	flex-wrap: wrap;
	justify-content: space-around;
	align-items: center;
	width: 100%;
	padding: 1rem;
	margin: 0 auto;
}

.featured-brand-logo {
	flex-basis: 12%;
	width: 100%;
}

.featured-brand-logos img {
	width: 100%;
	-webkit-filter: grayscale(60%);
	filter: grayscale(60%);
	margin: 0 auto;
}

.how-section {
	padding: 2rem 0;
}

.how-section .heading-secondary {
	color: #e67e22;
	text-align: center;
	font-weight: 700;
}

.how-section .subheading-text {
	font-weight: 700;
	text-align: center;
	padding: 1.5rem 0;
	margin-bottom: 2.5rem;
}

.step-cards {
	display: flex;
	flex-direction: column;
	gap: 1rem;
	width: 100%;
	height: 100%;
}

.step-text-card {
	display: flex;
	flex-direction: column;
	gap: 1rem;
	width: 100%;
	padding: 2.5rem;
}

.step-text-number {
	font-size: 6.125rem;
	font-weight: 700;
	color: #ebecef;
}

.step-text-heading {
	font-size: 2rem;
	font-weight: 700;
}

.step-text-description {
	font-size: 1.25rem;
	line-height: 1.5rem;
}

.step-card-images {
	display: flex;
	justify-content: center;
	align-items: center;
	width: 100%;
	background-color: #fdf2e9;
}

.meals-section {
	padding: 1rem 0 2rem;
}

.meals-section .heading-secondary {
	font-weight: 700;
	color: #e77e23;
	padding: 0.75rem 0;
	text-align: center;
}

.meals-section .subheading-text {
	font-weight: 700;
	text-align: center;
}

.meal-cards {
	padding: 2rem 0;
}

.meal {
	border-radius: 0.75rem;
	box-shadow: 0 0.125rem 0.25rem 0 rgba(0, 0, 0, 0.17);
}

.meal-image {
	border-top-left-radius: 0.75rem;
	border-top-right-radius: 0.75rem;
}

.meal-category {
	font-size: 0.888rem;
	color: #196f54;
	font-weight: 700;
	text-transform: uppercase;
	padding: 0.25rem 0;
}

.meal-name {
	font-weight: 700;
	padding: 0.25rem 0;
}

.meal-attributes-list {
	display: flex;
	flex-direction: column;
	gap: 0.75rem;
	padding: 0.5rem 0;
}

.meal-attributes-list-item {
	display: flex;
	align-items: center;
	font-size: 1.125rem;
}

.meal-attributes-list-item b {
	margin-right: 0.25rem;
}

.meal-attribute-icon {
	color: #e77e23;
	margin-right: 0.25rem;
}

.diet-list {
	display: flex;
	flex-direction: column;
	justify-content: space-between;
	gap: 0.5rem;
	padding: 0;
}

.diet-list h3 {
	font-weight: 700;
}

.diet-list-item {
	display: flex;
	align-items: center;
	gap: 0.25rem;
	font-size: 1.125rem;
	color: #555;
	font-weight: 500;
	text-transform: uppercase;
}

.diet-list-item-icon {
	color: #e77e23;
}

.see-all-recipes-section {
	display: flex;
	justify-content: center;
	align-items: center;
}
/* ... */

